# tensorflow-tfjs-sys

./: Cargo.toml  README.md  aliases.js  package-lock.json  package.json  search-index.js  settings.html  source-files.js
.ci/assets/docs/: index.html
.github/workflows/: ci.yml
crates/converter/: Cargo.toml
crates/core/: Cargo.toml
crates/layers/: Cargo.toml
crates/node/: Cargo.toml
crates/tfjs-converter-sys/: Cargo.toml
crates/tfjs-core-sys/: Cargo.toml
crates/tfjs-core-sys/src/: lib.rs
crates/tfjs-layers-sys/: Cargo.toml
crates/tfjs-node-sys/: Cargo.toml
implementors/core/convert/: trait.AsRef.js  trait.From.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/deref/: trait.Deref.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/wasm_bindgen/cast/: trait.JsCast.js
implementors/wasm_bindgen/convert/traits/: trait.FromWasmAbi.js  trait.IntoWasmAbi.js  trait.OptionFromWasmAbi.js  trait.OptionIntoWasmAbi.js  trait.RefFromWasmAbi.js
implementors/wasm_bindgen/describe/: trait.WasmDescribe.js
src/: browser.rs  callbacks.rs  constraints.rs  data.rs  environment.rs  initializers.rs  io.rs  layers.rs  lib.rs  metrics.rs  models.rs  performance.rs  tensors.rs
src/tensorflow_tfjs_sys/: browser.rs.html  callbacks.rs.html  constraints.rs.html  data.rs.html  initializers.rs.html  io.rs.html  layers.rs.html  lib.rs.html  metrics.rs.html  models.rs.html  performance.rs.html  tensors.rs.html
src/tensorflow_tfjs_sys/training/: losses.rs.html  mod.rs.html  train.rs.html
src/training/: mod.rs  train.rs
tensorflow_tfjs_sys/: all.html  fn.abs.html  fn.acos.html  fn.acos_h.html  fn.add.html  fn.add_n.html  fn.all.html  fn.any.html  fn.arg_max.html  fn.arg_min.html  fn.asin.html  fn.asin_h.html  fn.atan.html  fn.atan2.html  fn.atan_h.html  fn.avg_pool.html  fn.batch_norm.html  fn.batch_to_space_nd.html  fn.binary_accuracy.html  fn.binary_crossentropy.html  fn.buffer.html  fn.cast.html  fn.categorical_accuracy.html  fn.categorical_crossentropy.html  fn.ceil.html  fn.clip_by_value.html  fn.clone.html  fn.complex.html  fn.concat.html  fn.conv_1d.html  fn.conv_2d.html  fn.conv_2d_transpose.html  fn.conv_3d.html  fn.cos.html  fn.cos_h.html  fn.cosine_proximity.html  fn.cumsum.html  fn.depth_to_space.html  fn.depthwise_conv_2d.html  fn.deregister_op.html  (+156 more)
tensorflow_tfjs_sys/browser/: fn.from_pixels.html  fn.to_pixels.html  index.html  sidebar-items.js
tensorflow_tfjs_sys/io/: fn.copy_model.html  fn.list_models.html  fn.move_model.html  fn.remove_model.html  index.html  sidebar-items.js
tensorflow_tfjs_sys/layers/: struct.Layer.html  struct.RNNCell.html
tensorflow_tfjs_sys/losses/: index.html
tensorflow_tfjs_sys/models/: fn.deregister_op.html  fn.get_registered_op.html  fn.input.html  fn.load_graph_model.html  fn.load_layers_model.html  fn.model.html  fn.register_class.html  fn.registered_op.html  fn.sequential.html  struct.GraphModel.html  struct.LayersModel.html  struct.Sequential.html
tensorflow_tfjs_sys/performance/: fn.dispose.html  fn.keep.html  fn.memory.html  fn.next_frame.html  fn.profile.html  fn.tidy.html  fn.time.html
tensorflow_tfjs_sys/tensors/: fn.abs.html  fn.acos.html  fn.acos_h.html  fn.add.html  fn.add_n.html  fn.all.html  fn.any.html  fn.arg_max.html  fn.arg_min.html  fn.asin.html  fn.asin_h.html  fn.atan.html  fn.atan2.html  fn.atan_h.html  fn.avg_pool.html  fn.batch_norm.html  fn.batch_to_space_nd.html  fn.buffer.html  fn.cast.html  fn.ceil.html  fn.clip_by_value.html  fn.clone.html  fn.complex.html  fn.concat.html  fn.conv_1d.html  fn.conv_2d.html  fn.conv_2d_transpose.html  fn.conv_3d.html  fn.cos.html  fn.cos_h.html  fn.cumsum.html  fn.depth_to_space.html  fn.depthwise_conv_2d.html  fn.div.html  fn.dot.html  fn.elu.html  fn.equal.html  fn.erf.html  fn.exp.html  fn.exp_m1.html  (+106 more)
tensorflow_tfjs_sys/train/: fn.minimize.html  index.html  sidebar-items.js  struct.Optimizer.html
tensorflow_tfjs_sys/training/losses/: index.html
tensorflow_tfjs_sys/training/train/: fn.minimize.html  index.html  struct.Optimizer.html
tests/: callable.rs  lib.rs
