[package]
publish = false
edition = "2018"
name = "tensorflow-tfjs-sys"
version = "0.0.0"
authors = ["Darin Morrison <freebroccolo@users.noreply.github.com>"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/interfaces-rs/tensorflow-tfjs-sys"
description = """
Raw bindings to the @tensorflow/tfjs API for projects using wasm-bindgen.
"""

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "^0.7.0"
failure = "^0.1.6"
serde = "^1.0.101"
serde_derive = "^1.0.101"
sourcefile = "^0.1.4"
wasm-bindgen-futures = "^0.4.1"
wasm-bindgen-webidl = "^0.2.51"

[dependencies.js-sys]
version = "^0.3.32"
features = []

[dependencies.web-sys]
version = "^0.3.32"
features = [
  "HtmlCanvasElement",
  "HtmlImageElement",
  "HtmlVideoElement",
  "ImageData",
]

[dependencies.wasm-bindgen]
version = "^0.2.55"
features = ["serde-serialize", "strict-macro"]

[dev-dependencies]
wasm-bindgen-test = { version = "=0.3.5" }

[workspace]
members = [
  "crates/converter",
  "crates/core",
  "crates/layers",
  "crates/node",
]

[patch.crates-io]
tensorflow-tfjs-converter-sys = { path = 'crates/converter' }
tensorflow-tfjs-core-sys = { path = 'crates/core' }
tensorflow-tfjs-layers-sys = { path = 'crates/layers' }
tensorflow-tfjs-node-sys = { path = 'crates/node' }
tensorflow-tfjs-sys = { path = '.' }
