[package]
publish = false
edition = "2018"
name = "tensorflow-tfjs-core-sys"
version = "0.0.1"
authors = ["Darin Morrison <freebroccolo@users.noreply.github.com>"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/interfaces-rs/tensorflow-tfjs-sys"
description = """
Raw bindings to the @tensorflow/tfjs-core API for projects using wasm-bindgen.
"""

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.js-sys]
version = "^0.3.32"
features = []

[dependencies.serde]
version = "^1.0.104"
features = ["derive"]

[dependencies.web-sys]
version = "^0.3.32"
features = []

[dependencies.wasm-bindgen]
version = "^0.2.55"
features = ["serde-serialize"]

[features]
ArrayMap = []
DataType = []
DataTypeMap = []
DataValues = []
FlatVector = []
NumericDataType = []
Rank = []
RecursiveArray = []
RegularArray = []
ScalarLike = []
ShapeMap = []
SingleValueMap = []
Tensor = []
TensorLike = []
TensorLike1D = []
TensorLike2D = []
TensorLike3D = []
TensorLike4D = []
TensorLike5D = []
TensorLike6D = []
TypedArray = []
UpcastBoolAndMap = []
UpcastComplex64AndMap = []
UpcastFloat32AndMap = []
UpcastInt32AndMap = []
