[package]
publish = false
edition = "2018"
name = "tfjs-converter-sys"
version = "0.0.1"
authors = ["Darin Morrison <freebroccolo@users.noreply.github.com>"]
license = "(Apache-2.0 OR MIT)"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/interfaces-rs/tfjs-sys"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = "^1.0.101"
serde_derive = "^1.0.101"
wasm-bindgen-webidl = "^0.2.51"

[dependencies.js-sys]
version = "^0.3.28"
features = []

[dependencies.web-sys]
version = "^0.3.28"
features = []

[dependencies.wasm-bindgen]
version = "^0.2.51"
features = ["serde-serialize", "nightly"]
