[package]
publish = false
edition = "2018"
name = "tensorflow-tfjs-core-sys"
version = "0.0.1"
authors = ["Darin Morrison <freebroccolo@users.noreply.github.com>"]
license = "(Apache-2.0 OR MIT)"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/interfaces-rs/tensorflow-tfjs-sys"
description = """
Raw bindings to the @tensorflow/tfjs-core API for projects using wasm-bindgen.
"""

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
env_logger = "^0.7.0"
failure = "^0.1.5"
sourcefile = "^0.1.4"
wasm-bindgen-webidl = "^0.2.51"

[dependencies]
serde = "^1.0.101"
serde_derive = "^1.0.101"

[dependencies.js-sys]
version = "^0.3.28"
features = []

[dependencies.web-sys]
version = "^0.3.28"
features = []

[dependencies.wasm-bindgen]
version = "^0.2.51"
features = ["serde-serialize", "nightly"]

[features]
ArrayMap = []
DataType = []
DataTypeMap = []
DataValues = []
FlatVector = []
NumericDataType = []
Rank = []
RecursiveArray = []
RegularArray = []
ScalarLike = []
ShapeMap = []
SingleValueMap = []
Tensor = []
TensorLike = []
TensorLike1D = []
TensorLike2D = []
TensorLike3D = []
TensorLike4D = []
TensorLike5D = []
TensorLike6D = []
TypedArray = []
UpcastBoolAndMap = []
UpcastComplex64AndMap = []
UpcastFloat32AndMap = []
UpcastInt32AndMap = []
