[package]
publish = false
edition = "2018"
name = "tfjs-node-sys"
version = "0.0.1"
authors = ["Darin Morrison <freebroccolo@users.noreply.github.com>"]
license = "(Apache-2.0 OR MIT)"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/interfaces-rs/tfjs-sys"
description = """
Raw bindings to the tfjs-node API for projects using wasm-bindgen.
"""

[lib]
crate-type = ["rlib"]

[dependencies]
serde = "1.0.91"
serde_derive = "1.0.91"
wasm-bindgen-webidl = "0.2.45"

[dependencies.js-sys]
version = "0.3.22"
features = []

[dependencies.web-sys]
version = "0.3.22"
features = []

[dependencies.wasm-bindgen]
version = "0.2.45"
features = ["serde-serialize", "nightly"]
